Fixed Ionic Upgrade Issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
+  "name": "TAG",
+  "author": "Kehinde Kolade",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
